--- a/index.html
+++ b/index.html
@@ -1,13 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="discription" content="SomaU_mosha">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylesheet.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="shortcut icon" href="img/favicon.ico">
+    <title>SomaU</title>
 </head>
+
 <body>
-    <h1>HTML</h1>
+    <header id="header" class="wrapper">
+        <h1 class="site-title"><a href="index.html"><img src="img/logo.svg" alt="Profile"</a></h1>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#bicycle">Bicycle</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <div id="mainvisual">
+            <img src="img/mainvisual.jpg" alt="texttexttexttexttexttexttexttexttexttext">
+        </div>
+
+        <section id="about" class="wrapper">
+            <h2 class="section-title">About</h2>
+            <div class="content">
+                <img src="img/about.jpg" alt="texttexttexttexttexttext">
+                <div class="text">
+                    <h3 class="content-title">SOMA USAMI</h3>
+                    <p>texttexttexttexttexttexttexttext<br>
+                        texttexttexttexttexttexttexttext<br>
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section id="bicycle" class="wrapper">
+            <h2 class="section-title">Bicycle</h2>
+            <ul>
+                <li>
+                    <img src="img/bicycle1.jpg" alt="texttexttext">
+                    <h3 class="content-title">titletitletitletitle</h3>
+                    <p>texttexttexttext</p>
+                </li>
+                <li>
+                    <img src="img/bicycle2.jpg" alt="texttexttext">
+                    <h3 class="content-title">titletitletitletitle</h3>
+                    <p>texttexttexttext</p>
+                </li>
+                <li>
+                    <img src="img/bicycle3.jpg" alt="texttexttext">
+                    <h3 class="content-title">titletitletitletitle</h3>
+                    <p>texttexttexttext</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+
+    <footer id="footer">
+        <p>&copy; 2020 Profile</p>
+    </footer>
+    
 </body>
 </html>
