--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="discription" content="SomaU_mosha">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <link rel="shortcut icon" href="img/favicon.ico">
     <title>SomaU</title>
 </head>
@@ -65,6 +65,6 @@
     <footer id="footer">
         <p>&copy; 2020 Profile</p>
     </footer>
-    
+
 </body>
 </html>
